# ScopeRAG

./: README.md  main.py  pyproject.toml
src/scoperag/: __init__.py  server.py
src/scoperag/models/: health.py
